--- a/locales/zh/messages.json
+++ b/locales/zh/messages.json
@@ -5,7 +5,7 @@
   "cancel": {
     "message": "取消"
   },
-  "confrim": {
+  "confirm": {
     "message": "确认"
   },
   "server": {
@@ -36,7 +36,7 @@
     "message": "删除"
   },
   "tip_create_error": {
-    "message": "配置错误"
+    "message": "配置有误"
   },
   "tip_create_still_save": {
     "message": "，是否仍要保存？"
@@ -45,6 +45,6 @@
     "message": "服务器无法连接"
   },
   "tip_create_token_error": {
-    "message": "接口令牌不正确"
+    "message": "接口令牌不正确或服务器未正确配置"
   }
 }
