--- a/locales/zh/messages.json
+++ b/locales/zh/messages.json
@@ -11,44 +11,11 @@
   "confirm": {
     "message": "确认"
   },
-  "server": {
-    "message": "服务器"
-  },
-  "create": {
-    "message": "创建"
-  },
-  "title": {
-    "message": "标题"
-  },
-  "scheme": {
-    "message": "协议"
-  },
-  "host": {
-    "message": "服务器"
-  },
-  "port": {
-    "message": "端口"
-  },
-  "token": {
-    "message": "接口令牌"
-  },
   "deleteTip": {
     "message": "确定要删除此配置吗？"
   },
   "delete": {
     "message": "删除"
-  },
-  "tip_create_error": {
-    "message": "配置有误"
-  },
-  "tip_create_still_save": {
-    "message": "，是否仍要保存？"
-  },
-  "tip_create_network_error": {
-    "message": "服务器无法连接"
-  },
-  "tip_create_token_error": {
-    "message": "接口令牌不正确或服务器未正确配置"
   },
   "enabled": {
     "message": "已开启"
@@ -84,7 +51,7 @@
     "message": "设置不需要捕获的文件类型"
   },
   "file_type_filter_placeholder": {
-    "message": "每行输入一个文件后缀名，例如：jpg"
+    "message": "每行输入一个文件后缀名，例如：.jpg"
   },
   "min_file_size_filter": {
     "message": "小文件过滤"
@@ -125,17 +92,14 @@
   "enable_remote_download_desc": {
     "message": "开启后下载任务将直接发送到远程服务器"
   },
-  "add_server": {
-    "message": "添加服务器"
-  },
-  "edit_server": {
-    "message": "编辑服务器"
-  },
   "protocol": {
     "message": "协议"
   },
   "server_url": {
     "message": "服务器地址"
+  },
+  "token": {
+    "message": "接口令牌"
   },
   "save": {
     "message": "保存"
@@ -155,13 +119,37 @@
   "download_notification_desc": {
     "message": "在推送下载任务时显示浏览器通知"
   },
+  "add": {
+    "message": "添加"
+  },
   "test_server": {
     "message": "测试"
   },
   "test_success": {
     "message": "连接成功"
   },
-  "test_failed": {
-    "message": "连接失败"
+  "test_network_error": {
+    "message": "服务器无法连接"
+  },
+  "test_token_error": {
+    "message": "接口令牌不正确或服务器未正确配置"
+  },
+  "notification_create_success": {
+    "message": "创建成功"
+  },
+  "notification_create_success_message": {
+    "message": "任务已成功添加到下载服务器"
+  },
+  "notification_create_error": {
+    "message": "创建失败"
+  },
+  "notification_create_error_message": {
+    "message": "任务添加失败，请检查下载服务器是否正常"
+  },
+  "no_servers_tip": {
+    "message": "暂无服务器，点击上方按钮添加"
+  },
+  "download_servers": {
+    "message": "下载服务器"
   }
 }
