feat: support disable capture when hold ctrl key

--- a/locales/en/messages.json
+++ b/locales/en/messages.json
@@ -151,5 +151,11 @@
   },
   "notification_create_error_message": {
     "message": "Task add failed, please check if download server is working properly"
+  },
+  "ctrl_disable_capture": {
+    "message": "Disable Capture with Key"
+  },
+  "ctrl_disable_capture_desc": {
+    "message": "Hold %key% key to temporarily disable download capture"
   }
 }
