--- a/locales/en/messages.json
+++ b/locales/en/messages.json
@@ -39,10 +39,10 @@
     "message": "Domain Filter"
   },
   "domain_filter_desc": {
-    "message": "Set domains that do not need to be captured"
+    "message": "Set domains that do not need to be captured. Use * for subdomain match, * at start for all match, and * at start and end for contains match"
   },
   "domain_filter_placeholder": {
-    "message": "Enter one domain per line, e.g.: example.com"
+    "message": "Enter one domain per line. Supports exact match (example.com), subdomain match (*.example.com), all match (*example.com), and contains match (*example.com*)"
   },
   "file_type_filter": {
     "message": "File Type Filter"
